js/js.translator/testData/incremental/invalidation/companionInlineFunction/lib2/l2.2.kt
inline fun foo() = MyClass1.InternalClass.companionMethod()
